# .cmake

./: .clangd  CMakeLists.txt  CMakePresets.json  Macros.cmake  Options.cmake  Project.schema.json  README.md  Setup.cmake  experimental.cmake  setup  setup.bat  setup.sh
.github/workflows/: .cmake.yaml  android.yaml  emscripten.yaml  linux.yaml  macos.yaml  windows.yaml
Includes/: .clangd  Finalize.cmake  Macros.cmake  PackageManager.cmake  Project.json.cmake  Variables.cmake
Includes/IDEs/vscode/: Config.cmake  RebuildOnSave.cmake
Macros/: .clangd  Debug.cmake  Finalize.cmake  Macros.cmake  Properties.cmake
Modules/: C++Utils.cmake  Debug.cmake  Finalize.cmake  GlobalVariables.cmake  Macros.cmake  experimental.cmake
Modules/c++/: CMakeLists.txt
Modules/c++/Utils/: Compiler.c++  Formatters.c++  GetFunctionName.c++  GetFunctionName.cxx  Platform.c++  Platform.cxx  Utils.c++  Utils.ixx
Presets/: android.json  clang.json  common.json  emscripten.json
Project.json/: Archive.cmake  Git.cmake  Project.cmake
Templates/c++/: CMakeLists.txt  Project.json
Templates/c++/Source/: main.c++
ToolChains/: EmscriptenShell.html  android.cmake  clang.cmake  common.cmake  default.cmake  emscripten.cmake
ToolChains/Android/: settings.gradle.kts
ToolChains/Android/app/: build.gradle.kts
ToolChains/Android/app/src/main/: AndroidManifest.xml
ToolChains/Android/buildSrc/src/main/kotlin/dev/dotcmake/: Config.kt
ToolChains/gradle/: callback.cmake  common.cmake
c++/: CMakeLists.txt
c++/Utils/: Compiler.c++  Formatters.c++  GetFunctionName.c++  Utils.c++
